[package]
name = "rust-db-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-cors = "0.6"
utoipa = { version = "4.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "5.0", features = ["actix-web"] }

[dev-dependencies]
actix-rt = "2.9"
actix-test = "0.1"
serial_test = "2.0"
uuid = { version = "1.6", features = ["v4"] }
fake = { version = "2.9", features = ["derive"] }
